--- a/Github_Demo.ipynb
+++ b/Github_Demo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Github Demo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6YfRPPRl3kQ8TcOYSBV8L",
+      "authorship_tag": "ABX9TyN9/ZYWnNbpaS70a+gO92Tl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "sQYcrp-hgNMh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sQYcrp-hgNMh",
+        "outputId": "ec5f9c7f-040b-4136-e094-b662b4e11385"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter something10\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(input('enter something'))"
       ]
     }
   ]
